# AIForces

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/source/: conf.py  contents.rst  index.rst  languages.rst  problemsetting.rst  verdicts.rst
