[tool.poetry]
name = "aiforces"
version = "0.1.0"
description = ""
authors = ["Aleksandr Alekseev <https://github.com/aalekseevx>", "Danil Doroshin <ddddanil5555@gmail.com>", "Nikolay Rulev <https://github.com/AbsoluteNikola>"]

[tool.poetry.dependencies]
python = "^3.6"
sphinx_rtd_theme = "^0.4.3"
sphinx = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
